<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_study"
            android:icon="@drawable/ic_study"
            android:title="@string/title_study"/>

    <item
            android:id="@+id/navigation_work"
            android:icon="@drawable/ic_work"
            android:title="@string/title_work"/>

    <item
            android:id="@+id/navigation_health"
            android:icon="@drawable/ic_exercise"
            android:title="@string/title_health"/>

    <item
            android:id="@+id/navigation_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/title_setting"/>

</menu>