<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.JoinedRoomActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <Button
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="150dp"
            android:text="@string/room_joined_room"
            android:textSize="18sp"
            android:textColor="@color/background"
            android:background="@drawable/room_joined_rounded_rectangle"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:text="@string/room_joined_nameid"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="130dp"
                android:layout_height="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="10dp"
                android:text="@string/room_joined_slogan"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="20dp"
                android:text="@string/room_joined_roomstate"
                android:textSize="19sp"
                android:textColor="@color/teal_200"/>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="35dp"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="23dp"
                app:srcCompat="@drawable/random_avator8" />

            <TextView
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="10dp"
                android:text="。"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="40dp"
                android:text="今日已专注7小时46分钟" />

            <Button
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="60dp"
                android:background="@color/colorRipple"
                android:text="专注中" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="30dp"
                android:text="7小时46分钟"
                android:textColor="@color/teal_200"
                android:textSize="17sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="35dp"
                android:text="2"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="23dp"
                app:srcCompat="@drawable/random_avator9" />

            <TextView
                android:layout_width="170dp"
                android:layout_height="25dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="10dp"
                android:text="学不死就往死里学"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="40dp"
                android:text="今日已专注7小时20分钟" />

            <Button
                android:layout_width="90dp"
                android:layout_height="25dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="60dp"
                android:background="@color/colorRipple"
                android:text="共专注120天" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="30dp"
                android:text="7小时20分钟"
                android:textColor="@color/teal_200"
                android:textSize="17sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="35dp"
                android:text="3"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="23dp"
                app:srcCompat="@drawable/random_avator10" />

            <TextView
                android:layout_width="170dp"
                android:layout_height="25dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="10dp"
                android:text="绝命24h"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="40dp"
                android:text="今日已专注6小时48分钟" />

            <Button
                android:layout_width="85dp"
                android:layout_height="25dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="60dp"
                android:background="@color/colorRipple"
                android:text="共专注19天" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="30dp"
                android:text="6小时48分钟"
                android:textColor="@color/teal_200"
                android:textSize="17sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="35dp"
                android:text="4"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="23dp"
                app:srcCompat="@drawable/random_avator13" />

            <TextView
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="10dp"
                android:text="期末考完才能看春季赛！"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="40dp"
                android:text="今日已专注6小时20分钟" />

            <Button
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="60dp"
                android:background="@color/colorRipple"
                android:text="专注中" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="30dp"
                android:text="6小时20分钟"
                android:textColor="@color/teal_200"
                android:textSize="17sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="35dp"
                android:text="5"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="23dp"
                app:srcCompat="@drawable/random_avator14" />

            <TextView
                android:layout_width="170dp"
                android:layout_height="25dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="10dp"
                android:text="沫黎"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="40dp"
                android:text="今日已专注5小时29分钟" />

            <Button
                android:layout_width="85dp"
                android:layout_height="25dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="60dp"
                android:background="@color/colorRipple"
                android:text="共专注49天" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="30dp"
                android:text="5小时29分钟"
                android:textColor="@color/teal_200"
                android:textSize="17sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="35dp"
                android:text="6"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="23dp"
                app:srcCompat="@drawable/random_avator15" />

            <TextView
                android:layout_width="170dp"
                android:layout_height="25dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="10dp"
                android:text="西瓜酸奶"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="40dp"
                android:text="今日已专注4小时44分钟" />

            <Button
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="60dp"
                android:background="@color/colorRipple"
                android:text="专注中" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="30dp"
                android:text="4小时44分钟"
                android:textColor="@color/teal_200"
                android:textSize="17sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="35dp"
                android:text="7"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="23dp"
                app:srcCompat="@drawable/random_avator9"/>

            <TextView
                android:layout_width="170dp"
                android:layout_height="25dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="10dp"
                android:text="soler"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="40dp"
                android:text="今日已专注2小时58分钟" />

            <Button
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="60dp"
                android:background="@color/colorRipple"
                android:text="专注中" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="30dp"
                android:text="2小时58分钟"
                android:textColor="@color/teal_200"
                android:textSize="17sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="35dp"
                android:text="8"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="23dp"
                app:srcCompat="@drawable/random_avator15"/>

            <TextView
                android:layout_width="170dp"
                android:layout_height="25dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="10dp"
                android:text="CAI.M"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="40dp"
                android:text="今日已专注1小时31分钟" />

            <Button
                android:layout_width="85dp"
                android:layout_height="25dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="60dp"
                android:background="@color/colorRipple"
                android:text="共专注16天" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="30dp"
                android:text="1小时31分钟"
                android:textColor="@color/teal_200"
                android:textSize="17sp" />

        </RelativeLayout>


    </LinearLayout>




</androidx.core.widget.NestedScrollView>
